--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-devtools": "^5.81.2",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
     "react": "^19.1.0",
